# tracking

./: CMakeLists.txt  LICENSE  LucasKanadeTracker.cpp  LucasKanadeTracker.h  MeanshiftTracker.cpp  MeanshiftTracker.h  README.md  Tracker.h  arguments  main.cpp
